# analysis-srv

./: .dockerignore  .env.example  .env.test  .gitignore  GUIDE.md  Makefile  README.md  REPO_CONTEXT.md  architecture.excalidraw  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml
apps/consumer/: Dockerfile  deployment.yaml  main.py
cmd/consumer/: main.py
command/consumer/: Dockerfile  main.py
commands/api/: main.py
commands/consumer/: main.py
config/: aspects_patterns.yaml  config.example.yaml  config.py  config.yaml  config.yaml.example
config/domains/: _default.yaml  vinfast.yaml
config/ontology/: entities.yaml  source_channels.yaml  taxonomy.yaml  vinfast_vn.yaml
core/: config.py  config_validation.py
document/: analytic_orchestrator.md  analytics-behavior.md  analytics-service-behavior.md  analytics-service-integration-guide.md  architecture.md  batch-processing-rationale.md  batching_trade_off.md  event-drivent.md  expect_chart_creatable.md  implement_plan.md  integration-analytics-service.md  integration-contract.md  master-proposal.md  phobert_report.md  spacyyake_report.md
documents/: analysis-report.md  analysis.md  analytic_orchestrator.md  architecture.md  expect_chart_creatable.md  impact_risk_module.md  implement_plan.md  input_payload.md  master-proposal.md  module_phase_5.md  output_payload.md  phase1_code_plan.md  phase2_code_plan.md  phase3_code_plan.md  phase4_code_plan.md  phase5_code_plan.md  phase_4_proposal.md  phobert_report.md  production-readiness.md  spacyyake_report.md
examples/: api_test_curl_example.sh  preprocess_example.py  sentiment_example.py
infrastructure/ai/: constants.py  spacyyake_extractor.py
infrastructure/messaging/: __init__.py  publisher.py  rabbitmq.py
infrastructure/storage/: constants.py  minio_client.py
internal/analytics/: README.md  __init__.py  constant.py  errors.py  interface.py  type.py
internal/analyzed_post/: __init__.py  errors.py  interface.py  type.py
internal/api/: dependencies.py  main.py
internal/builder/: __init__.py  constant.py  errors.py  interface.py  type.py
internal/consumer/: __init__.py  handler.py  interface.py  registry.py  server.py  type.py
internal/consumers/: item_processor.py  main.py  metrics.py
internal/contract_publisher/: constant.py  errors.py  interface.py  type.py
internal/crisis/: __init__.py  constant.py  errors.py  interface.py  type.py
internal/dedup/: __init__.py  constant.py  errors.py  interface.py  type.py
internal/domain/: __init__.py  loader.py  type.py
internal/enrichment/: __init__.py  constant.py  errors.py  interface.py  type.py
internal/impact_calculation/: README.md  __init__.py  constant.py  errors.py  interface.py  type.py
internal/ingestion/: __init__.py  constant.py  errors.py  interface.py  type.py
internal/intent_classification/: README.md  __init__.py  constant.py  errors.py  interface.py  type.py
internal/keyword_extraction/: README.md  __init__.py  constant.py  errors.py  interface.py  type.py
internal/model/: __init__.py  analyzed_post.py  base.py  constant.py  insight_message.py  post_insight.py  uap.py
internal/normalization/: __init__.py  (+4 more)
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml
manifests/: configmap.yaml  configmap.yaml.example  hpa.yaml  secret.yaml  secret.yaml.example
migration/: 001_create_analytics_outbox.sql  001_create_analytics_schema.sql  001_create_analyzed_posts_table.sql  002_create_analytics_run_manifest.sql  002_drop_legacy_schema.sql  004_drop_legacy_schema.sql  init_db.sql
models/: database.py  messages.py
openspec/: project.md
pkg/: time_utils.py
repositories/: analytics_repository.py
repository/: analytics_repository.py  crawl_error_repository.py
scripts/: Dockerfile.base  build-base.sh  build-consumer.sh  clean-kafka-topic.sh  download_model.sh  phobert_onnx.py  replay_batch.py  run_migration.py  test_analytics_message.py  verify_db_connection.py
tests/: test_crisis.py  test_dedup.py  test_domain.py  test_enrichment.py  test_normalization.py  test_reporting.py  test_review.py  test_spam.py  test_storage.py  test_threads.py  test_uap_ingest_record.py
utils/: __init__.py
(+353 files in other folders)
