[project]
name = "analysis"
version = "0.1.0"
description = "Analytics service for sentiment analysis and keyword extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Message Queue & Async
    "aio-pika>=9.5.8",
    "aiokafka>=0.11.0",
    "python-snappy>=0.7.0",
    # Logging
    "loguru>=0.7.3",
    # Configuration
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    # Database
    "redis>=7.1.1",
    "sqlalchemy>=2.0.46",
    "asyncpg>=0.30.0",
    # Object Storage
    "minio>=7.2.0",
    # Compression
    "zstandard>=0.23.0",
    # ML/NLP - PhoBERT
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "optimum[onnxruntime]>=1.18.0",
    "pyvi>=0.1.1",
    # ML/NLP - Keyword Extraction
    "spacy>=3.7.0",
    "yake>=0.4.8",
    "numpy>=1.24.0",
    "greenlet>=3.3.1",
    # Phase 3 — Ingestion / Normalization / Dedup / Spam / Threads
    "datasketch>=1.6",
    "fasttext-wheel>=0.9",
    "polars>=0.20",
    # Ontology models (OntologyRegistry uses Pydantic v2 BaseModel + model_validator)
    "pydantic>=2.0",
    # Observability
    "prometheus-client>=0.20",
]

[project.scripts]
consumer = "apps.consumer.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "pkg", "config", "internal"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that require a running Kafka broker (skip with -m 'not e2e')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "testcontainers[kafka]>=4.9.0",
]
